# onlineChatroom

./: CmakeLists.txt  README.md  chatMsg.hpp  client.cpp  传输协议.md  日志.txt  消息封装函数.cpp
Client/: AddFriendDialog.cpp  AddFriendDialog.h  AddFriendDialog.ui  Client.pro  CreateGroupDialog.cpp  CreateGroupDialog.ui  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkManager.cpp  NetworkManager.h  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  SetNickname.cpp  SetNickname.h  SetNickname.ui  SetServerDialog.cpp  SetServerDialog.h  SetServerDialog.ui  chatMsg.hpp  main.cpp
Client/.qtcreator/: Client.pro.user.0392377  Client.pro.user.461e307  Client.pro.user.f1960c2
Server/: CMakeLists.txt  aiService.cpp  chatMsg_server.hpp  handleClient.cpp  logger.cpp  main.cpp  monitor.cpp  server.cpp  socket.cpp  userControl.cpp
Server/headers/: aiService.h  handleClient.h  logger.h  monitor.h  socket.h  userControl.h
Server/imgui/: imgui.h  imgui_internal.h  imgui_tables.cpp
chatroom/: chatMsg.hpp  server.cpp  传输协议.md
聊天室/: CmakeLists.txt  README.md  chatMsg.hpp  client.cpp  server.cpp
